k8s/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lesta-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: lesta-app
  template:
    metadata:
      labels:
        app: lesta-app
    spec:
      containers:
      - name: app
        image: lesta-start:7.1
        ports:
        - containerPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
      - name: postgres
        image: postgres:16-alpine
        ports:
        - containerPort: 5432
