k8s/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: lesta-service
spec:
  type: NodePort
  selector:
    app: lesta-app
  ports:
  - name: http
    port: 80
    targetPort: 8080
    nodePort: 30080
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
spec:
  selector:
    app: postgres
  ports:
  - port: 5432
